@@ -1,3 +1,10 @@
+*zenbook-als-0_p20140222 (23 Feb 2014)
+
+  23 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +files/zenbook-als.initd,
+  +zenbook-als-0_p20140222.ebuild, -zenbook-als-0_p20140129.ebuild,
+  zenbook-als-9999.ebuild:
+  [app-laptop/zenbook-als] Update snapshot. Add init-script.
+
   07 Feb 2014; Manuel Rüger <mrueg@gentoo.org> zenbook-als-0_p20140129.ebuild,
   zenbook-als-9999.ebuild:
   [app-laptop/zenbook-als] Add missing RDEPEND.
